--- a/games.html
+++ b/games.html
@@ -75,7 +75,7 @@ The goal is to explore a mysterious world as a dog warrior to find your missing 
   <br>
   <a target='_blank' href="https://jasontomlee.itch.io/beanguys">Click here to head to the download page!</a>
 	</div>
-
+		<div style="margin-top:200px;"></div>
 		<div class="overlay" style="width:100%; height:25%; bottom:25%;"></div>
 	</div>
 	
